Fix extension uninstall ping XML.

Bug: 771987
Change-Id: If0293e9c73d575719544fbbdcb1f40fbf6df4962
Reviewed-on: https://chromium-review.googlesource.com/702057
Reviewed-by: Sorin Jianu <sorin@chromium.org>
Commit-Queue: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506761}
Former-commit-id: 426e47187f129a742e3c38200b4ff071e861e262